Fixed Horizontal Scrollbar issues in Linsenpate

--- a/css/styles.css
+++ b/css/styles.css
@@ -720,7 +720,7 @@ a.logo:hover{
 .related-projects-box{
     display: flex;
     flex-flow: row wrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-content: flex-start;
     align-items: flex-start;
     width: 100%;
@@ -736,7 +736,15 @@ a.logo:hover{
     display: flex;
     flex-direction: column;
     align-content: flex-start;
-    width: 48%;
+    background-color: white;
+    color: #333333;
+    border-radius: 10px;
+    margin: 1%;
+    width: 18%;
+    /* min-width: 300px; */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
     min-height: 320px;
 }
 
@@ -752,7 +760,6 @@ a.logo:hover{
 .related-project-title{
     margin-bottom: 0;
 }
-
 
 
 
@@ -970,7 +977,7 @@ Small devices // Smaller than iPad (768px and smaller)
         margin-left: 6px;
         margin-right: 6px;
     }
-
+    
     .related-project-title h4{
         font-size: 0.8rem;
         line-height: 1rem;
